testsuite/tests/match-exception-warnings/no_mixing_under_guard.ml.reference

#                 Characters 70-91:
    | true | exception Exit when r := "hello"; true -> !r
      ^^^^^^^^^^^^^^^^^^^^^
Error: Mixing return and exception cases under when-guards is not supported.
# 
