testsuite/tests/match-exception-warnings/no_mixing_under_guard.ml
exception Exit

let r = ref ""

let guarded f =
  match f () with
  | true | exception Exit when r := "hello"; true -> !r
  | _ -> "other"
;;
